<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Processing A-IDE</string>
    <string name="app_version">v0.0.1a</string>
    <string name="app_description">P-A-IDE - мобильная IDE для программирования на языке Processing. Собирай и запускай скетчи!</string>
    
    <string name="create_project">Создать проект</string>
    <string name="projects_list">Список проектов</string>
    <string name="projects">Меню проектов</string>
    <string name="projects_not_found">Проекты не найдены</string>
    <string name="project_name">Название проекта</string>
    <string name="empty_project_name">Название проекта не может быть пустым!</string>
    
    <string name="save">Сохраниться</string>
    <string name="launch">Запустить</string>
    <string name="format_code">Форматировать код</string>
    <string name="build">Сборка проекта</string>
    
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    
    <string name="processing_core_copyed_successful">processing-core.jar Успешно скопирован!</string>
    <string name="processing_core_copyed_unsuccessful">Произошла ошибка при копировании processing-core.jar</string>
</resources>